ci: multi-platform build con soporte Arch Linux

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,23 +3,23 @@ name: Build Multi-Platform Release
 on:
   push:
     tags:
-      - 'v*.*.*'  # Activa en tags como v1.0.0
-  workflow_dispatch:  # Permite ejecución manual
+      - 'v*.*.*'
+  workflow_dispatch:
 
 jobs:
   build:
     strategy:
+      fail-fast: false  # No cancelar otros jobs si uno falla
       matrix:
-        os: [ubuntu-latest, windows-latest]
         include:
           - os: ubuntu-latest
             platform: linux
             artifact_name: StockManager-Linux
-            build_script: build:linux
+            targets: AppImage deb
           - os: windows-latest
             platform: windows
             artifact_name: StockManager-Windows
-            build_script: build:win
+            targets: nsis
     
     runs-on: ${{ matrix.os }}
     
@@ -36,45 +36,55 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
       
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller flask werkzeug
+          pip install -r requirements.txt
+          pip install pyinstaller
       
       - name: Install Node dependencies
         run: npm ci
       
-      - name: Build Python server (Linux)
-        if: matrix.platform == 'linux'
+      - name: Build Python server
         run: |
-          pyinstaller build/build.spec
-          chmod +x dist/stock-manager-server
+          cd build
+          pyinstaller build.spec
+        shell: bash
       
-      - name: Build Python server (Windows)
-        if: matrix.platform == 'windows'
-        run: pyinstaller build/build.spec
+      - name: Verify Python build
+        run: |
+          ls -la dist/
+        shell: bash
       
-      - name: Build Electron app
-        run: npm run ${{ matrix.build_script }}
+      - name: Build Electron app (Linux)
+        if: matrix.platform == 'linux'
+        run: npm run build:linux
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: List build artifacts (debug)
+      - name: Build Electron app (Windows)
+        if: matrix.platform == 'windows'
+        run: npm run build:win
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: List artifacts
         run: |
-          ls -R dist/
+          echo "=== Dist directory ==="
+          ls -lh dist/
         shell: bash
       
-      - name: Upload Linux AppImage
+      # Upload artifacts individuales
+      - name: Upload AppImage (Linux)
         if: matrix.platform == 'linux'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}-AppImage
           path: dist/*.AppImage
-          if-no-files-found: warn
+          if-no-files-found: error
       
-      - name: Upload Linux DEB
+      - name: Upload DEB (Linux)
         if: matrix.platform == 'linux'
         uses: actions/upload-artifact@v4
         with:
@@ -88,10 +98,47 @@ jobs:
         with:
           name: ${{ matrix.artifact_name }}-Installer
           path: dist/*.exe
+          if-no-files-found: error
+
+  build-arch:
+    runs-on: ubuntu-latest
+    container:
+      image: archlinux:latest
+    
+    steps:
+      - name: Install base dependencies
+        run: |
+          pacman -Syu --noconfirm
+          pacman -S --noconfirm base-devel git python python-pip nodejs npm fakeroot
+      
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Install Python dependencies
+        run: |
+          pip install --break-system-packages flask werkzeug pyinstaller
+      
+      - name: Install Node dependencies
+        run: npm ci
+      
+      - name: Build Python server
+        run: |
+          cd build
+          pyinstaller build.spec
+      
+      - name: Build Electron (pacman package)
+        run: |
+          npm run build:linux -- --linux pacman
+      
+      - name: Upload Arch package
+        uses: actions/upload-artifact@v4
+        with:
+          name: StockManager-Arch
+          path: dist/*.pacman
           if-no-files-found: warn
   
   release:
-    needs: build
+    needs: [build, build-arch]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     
@@ -101,6 +148,9 @@ jobs:
         with:
           path: artifacts
       
+      - name: Display structure
+        run: ls -R artifacts/
+      
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
@@ -108,8 +158,40 @@ jobs:
             artifacts/**/*.AppImage
             artifacts/**/*.deb
             artifacts/**/*.exe
+            artifacts/**/*.pacman
           generate_release_notes: true
           draft: false
           prerelease: false
+          body: |
+            ## Descargas
+
+            ### Windows
+            - `Stock Manager Setup.exe` - Instalador para Windows 10/11
+
+            ### Linux
+            - `StockManager.AppImage` - Portable para cualquier distro
+            - `stockmanager.deb` - Paquete para Debian/Ubuntu/Mint
+            - `stockmanager.pacman` - Paquete para Arch/Manjaro
+
+            ## Instalación
+
+            **Windows:** Ejecuta el instalador y sigue las instrucciones.
+
+            **Linux (AppImage):**
+            ```bash
+            chmod +x StockManager-*.AppImage
+            ./StockManager-*.AppImage
+            ```
+
+            **Debian/Ubuntu:**
+            ```bash
+            sudo dpkg -i stockmanager_*.deb
+            sudo apt-get install -f
+            ```
+
+            **Arch/Manjaro:**
+            ```bash
+            sudo pacman -U stockmanager-*.pkg.tar.zst
+            ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
