--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask werkzeug pyinstaller
+          pip install flask werkzeug pyinstaller requests
       
       - name: Install Node dependencies
         run: npm ci
@@ -144,7 +144,7 @@ jobs:
           draft: false
           prerelease: false
           body: |
-            ## 📦 Descargas
+            ## Descargas
 
             ### Windows
             - **Stock Manager Setup.exe** - Instalador para Windows 10/11
@@ -153,7 +153,7 @@ jobs:
             - **stock-manager.AppImage** - Portable para cualquier distribución
             - **stock-manager.deb** - Paquete para Debian/Ubuntu/Mint
 
-            ## 🚀 Instalación
+            ## Instalación
 
             **Windows:**
             ```
