--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flask werkzeug pyinstaller requests
+          pip install flask werkzeug pyinstaller requests python-dotenv
       
       - name: Install Node dependencies
         run: npm ci
